updated intro page

--- a/Aquagator_Website/about.qmd
+++ b/Aquagator_Website/about.qmd
@@ -1,5 +1,11 @@
 ---
-title: "About"
+title: "About Us!"
 ---
 
-About this site
+## Janyl Jumanova
+
+## Benedeck Kaibas
+
+## Miguel Orti-Vila
+
+## Josephine Reiter
